--- a/_MOB_paper.Rnw
+++ b/_MOB_paper.Rnw
@@ -29,8 +29,8 @@
 \authorsnames{Marjolein Fokkema$^1$ \& Carolin Strobl$^2$}
 \authorsaffiliations{$^1$Leiden University, $^2$Universit\"at Z\"urich}
 
-\abstract{MOB \citep[MOB]{ZeilyHoth08} is a flexible framework for detecting subgroups \edc{of persons showing different} effects in a wide range of parametric models. It provides a versatile tool for detecting and explaining heterogeneity of intervention effects. In this tutorial paper, we provide an introduction to the general MOB framework. In two specific case studies, we show how MOB-based methods can be used to detect and explain heterogeneity in two widely-used frameworks in educational studies: mixed-effects and item-response theory models. In the first case study, we show how GLMM trees \citep{FokkySmit18} can be used to detect subgroups with different parameters in mixed-effects models. We apply GLMM trees to a dataset from a study of \citep{Demi09}, who compared longitudinal performance of siblings who did, and siblings who did not participate in the Head Start program. Using GLMM trees, we identify subgroups of families in which children show comparatively larger or smaller gains in performance following participation in Head Start. In a second case study, we show how Rasch trees \citep{StroyKopf15} can be used to detect subgroups with different item parameters in IRT models, \edc{i.e.~differential item functioning (DIF).
-DIF should be investigated before using test results for comparing groups, because undetected DIF can affect test fairness.} We show how a recently developed stopping criterion \citep{HennyDeba23} can be used to guide subgroup detection based on effect sizes instead of statistical significance.\\}
+\abstract{Model-based recursive partitioning \citep[MOB,][]{ZeilyHoth08} is a flexible framework for detecting subgroups \edc{of persons showing different} effects in a wide range of parametric models. It provides a versatile tool for detecting and explaining heterogeneity of intervention effects. In this tutorial paper, we provide an introduction to the general MOB framework. In two specific case studies, we show how MOB-based methods can be used to detect and explain heterogeneity in two widely-used frameworks in educational studies: mixed-effects and item-response theory models. In the first case study, we show how GLMM trees \citep{FokkySmit18} can be used to detect subgroups with different parameters in mixed-effects models. We apply GLMM trees to a dataset from a study of \citep{Demi09}, who compared longitudinal performance of siblings who did, and siblings who did not participate in the Head Start program. Using GLMM trees, we identify subgroups of families in which children show comparatively larger or smaller gains in performance following participation in Head Start. In a second case study, we show how Rasch trees \citep{StroyKopf15} can be used to detect subgroups with different item parameters in IRT models, \edc{i.e.~differential item functioning (DIF).
+DIF should be investigated before using test results for comparing groups, because undetected DIF can affect test fairness.} We show how a recently developed stopping criterion \citep{HennyDeba23} can be used to guide subgroup detection based on DIF effect sizes.\\}
 
 \begin{document}
 \SweaveOpts{concordance=TRUE}
@@ -52,64 +52,59 @@ options(prompt=" ", continue = " ")
 \section{Introduction}
 \label{sec:Introduction}
 
-MOB \citep[MOB]{ZeilyHoth08} is a semi-parametric approach for detecting differences in the parameters of a statistical
+Model-based recursive partitioning \citep[MOB,][]{ZeilyHoth08} is a semi-parametric approach for detecting differences in the parameters of a statistical
 model between groups of persons. This method is a generalization of the principle of recursive partitioning, that is also used in classification and regression trees \citet{Breetal:1984}. 
-In classification and regression trees, the aim is to detect groups of persons, specified by (combinations of) covariates, that differ in a response variable. An example could be that children with ???? and ???? show higher average exam grades than others. 
-MOB generalizes this idea by identifying groups of persons, specified by (combinations of) covariates, that differ in a the parameters of a statistical model. An example could be that children with ???? and ???? show higher slopes in a regression model relating time spent studying and exam grades than others. 
+In classification and regression trees, the aim is to detect groups of persons, specified by (combinations of) covariates, that differ in a response variable. An example could be that children who are highly motivated and have good reading skills show higher average math exam grades. 
+MOB generalizes this idea by identifying groups of persons, specified by (combinations of) covariates, that differ in a the parameters of a statistical model. An example could be that children who are highly motivated and have good reading skills show higher slopes in a regression model relating the time spent studying to math exam grades. 
 
-The framework of MOB is very flexible and can be applied in combination with a variety of statistical models. In this article, we will highlight two such combinations that we consider particularly relevant for research in school psychology: MOB for mixed-effects models and for models from Rasch measurement models. Mixed-effects models become relevant whenever data are collected in a repeated measures or nested data structures, for example when children are tested at several time points (so that time points are nested in children) and/or when children from different classes from different schools (so that children are nested in classes, which are again nested in schools) participate in a study. In application example 1 we will illustrate how MOB can be used to detect subgroup-specific intervention effects while taking into account the nested data structure. 
+The framework of MOB is very flexible and can be applied in combination with a variety of statistical models, such as linear and generalized linear regression \citep{KopAugStr:2013,ZeilyHoth08} or models for paired-comparison data \citep{StrWicZei:2011:JoEaBS}. In this article, we will highlight two such combinations that we consider particularly relevant for research in school psychology: MOB for mixed-effects models \cite{FokkySmit18} and for models from Rasch measurement and Item Response Theory \citep[IRT,][]{StrKopZei:2015:P,KomStrZei:2017:EaPM,HenDebStr:2023:EPM}. Mixed-effects models become relevant whenever data are collected in repeated measures or nested data structures, for example when children are tested at several time points (so that time points are nested in children) and/or when children from different classes from different schools (so that children are nested in classes, which are again nested in schools) participate in a study. In application example 1 we will illustrate how MOB can be used to detect subgroup-specific intervention effects while taking into account the nested data structure. 
 
-\todo[inline]{should we call a psychological test a test/an instrument/??? to distinguish it from the verb and noun for statistical test?}
-
-While for this first application example we assume that the administered ??? items/test has already been thoroughly validated, for application example 2 we go back in the research process to the point where a new test is administered to a validation sample. Before using the test in our research, we need to make sure that test results are comparable, for example between children of different genders. If certain items pose an advantage or disadvantage to either group, they are said to violate measurement invariance or exhibit differential item functioning (DIF). In order to test for DIF in the framework of Item Response Theory or Rasch modelling \cite{AnthyDiPe16,DebStrZei:2022:CRC,Mall97}, groups of persons are compared with respect to the item parameters for their specific group. This can be done in a way that allows to detect DIF on top of any true group differences in ability. While many standard approaches for testing DIF are limited to comparing typically two pre-specified groups at a time, we will show in application example 2 that MOB more flexibly allows to detect groups of persons with different item parameters in a data-driven way. 
+While for this first application example we assume that the administered test \todo{should we call a psychological test a test/an instrument/??? to distinguish it from the verb and noun for statistical test?} has already been thoroughly validated, for application example 2 we go back in the research process to the point where a new test is administered to a validation sample. Before using the test in our research, we need to make sure that test results are comparable, for example between children of different genders. If certain items pose an advantage or disadvantage to either group, they are said to violate measurement invariance or exhibit differential item functioning (DIF). In order to test for DIF in the framework of Item Response Theory or Rasch modelling \cite{AnthyDiPe16,DebStrZei:2022:CRC,Mall97}, groups of persons are compared with respect to the item parameters for their specific group. This can be done in a way that allows to detect DIF on top of any true group differences in ability. While many standard approaches for testing DIF are limited to comparing typically two pre-specified groups at a time, we will show in application example 2 that MOB more flexibly allows to detect groups of persons with different item parameters in a data-driven 
+way. 
 
 In the following section, we will give a short introduction into the algorithm and statistical concepts behind MOB. Readers interested in learning more about its predecessor method, classification and regression trees, are referred to the introduction by \citet{StrMalTut:2009:PM}. An alternative framework for detecting groups of persons with different model parameters is mixture modelling \citep[see, e.g.,][in the context of Rasch modelling]{AyalySant17,FriStrZei:2015:EaPM}. Mixture modelling aims at identifying latent classes of persons with different properties. It can also be combined with covariates. A comparison of both approches is given by \citet{FriStrZei:2014}.
 
-\todo[inline]{Caro: I mostly added our own citations so far, need to add more from other authors}
-
-\todo[inline]{Caro: move this to next section}
-One important aspect that we would like to point out, however, is that some algorithms for classification and regression trees and related methods suffer from a problem called variable selection bias. This means that, due to their construction principles, some algorithms systematically prefer variables of certain types. 
 
 \section{The algorithm behind MOB}
 
-What you see displayed in Figures ??? and ???, which will be explained in detail in the application example sections, is the result of the MOB algorithm for a linear mixed-effects model (Figure ???) and for a binary Rasch model (Figure ???). Both/???all figures share the tree-structure at the top. The starting point at the very top of each tree is called the root node (so it is actually an upside down tree). The root node contains the entire sample of persons in the data set. From there, the persons are devided into subgroups. The subgroups are defined by covariates and cutpoints in those covariates (for example, in the semi-continuous covariate ??? \todo{adapt to final examples} the cutpoint ??? was selected; in a binary covariate like ???, on the other hand, there is only one possible cutpoint, namely between the two categories). Which splitting variable and cutpoint is selected in each step of the recursive partitiong algorithms is further explained below. The parametric model to which the MOB algorithm is applied is visualized in the end nodes at the bottom of each tree. While in Figure ??? each end node contains a linear mixed-effecs model with a group-specific effect for the ??? intervention, in Figure ??? each end node contains the group-specific item parameters of a Rasch model for the ??? items. 
+What you see displayed in Figures~\ref{fig:lmm_tree}, \ref{fig:math_tree}, and \ref{fig:read_tree}\todo{adjust if raschtree example changes}, which will be explained in detail in the application example sections, is the result of the MOB algorithm for a linear mixed-effects model (Figure~\ref{fig:lmm_tree}) and for a binary Rasch model (Figures~\ref{fig:math_tree} and \ref{fig:read_tree}). These figures share the tree-structure in the upper part, but differ in their lower part. The starting point of the tree structure is at the very top of each tree. The very top of each tree is called the root node, so what you see are actually ``upside down'' trees with the root at the top and the branches at the 
+bottom. The root node at the very top contains the entire sample of persons in the data set. From there, the persons are divided into subgroups.
 
-The fact that Figures ??? display more than one end node means that one joint mixed-effects or Rasch model was not appropriate to describe the pattern in the data. 
+The subgroups are defined by the covariates that are used for splitting and together with cutpoints in those covariates. For example, in Figure~\ref{fig:lmm_tree} for the metric covariates \texttt{AFTQ} and \income{Income} a numeric cutpoint has been selected by the MOB algorithm to separate the groups. The algorithm has identified this cutpoint as being the location of the strongest parameter difference between the two resulting groups. The categorical covariate \texttt{Race}, which was coded in three categories in this example, has been divided into two groups of categories: Black and Hispanic vs.~White. For a binary covariate, \todo{like ... -- add name if is there one in the other example?} 
+on the other hand, there is only one possible cutpoint, namely between the two categories. While it is also possible to create more than two groups in each split \citep{KimLoh:2001,Qui:1993}, binary splitting algorithms are typically preferred because they lead to more concise trees. 
 
-Figure ??? also shows that, out of the ??? covariates that were presented to the algorithm, only ??? were actually selected. Variables are selected based on ????. Variables that are no associated with a difference in the model parameters are not included in the tree, i.e., the tree performs automatic variable selection. 
+The parametric model to which the MOB algorithm is applied is visualized in the end nodes at the bottom of each tree. While in Figure~\ref{fig:lmm_tree} each end node contains a linear mixed-effecs model with a group-specific effect for the Head Start intervention, in Figures~\ref{fig:math_tree} and \ref{fig:read_tree} each end node contains the group-specific item parameters of a Rasch model for the respective test items. 
+The fact that the Figures display more than one end node already means that one joint mixed-effects or Rasch model was not appropriate to describe the pattern in the data. Figure~\ref{fig:lmm_tree} also shows that, out of the  covariates that were presented to the algorithm (\texttt{AFTQ}, \texttt{Race}, \texttt{Income},\texttt{Mom\_edu\_yrs}, and \texttt{Mom\_height}), only \texttt{AFTQ}, \texttt{Race}, and \texttt{Income} were actually selected for splitting. Variables are selected based on a statistical test for parameter differences, also termed a test for structural change. Structural change is present if, for example, the model parameters systematically differ for children from lower vs.~higher income families. At each node, the algorithm will select the covariate showing the strongest structural change as the next splitting variable. Within this variables, the optimal cutpoint is chosen in a separate step.
 
-still no type I error inflation because closed testing procedure ???cite wie in Raschtree paper 
+The way the variable selection and cutpoint selection steps are separated in modern classification and regression tree and MOB algorithms, including the ones used here, distinguish them from the traditional classification and regression tree algorithms of \citet{Breetal:1984} and \citet{Qui:1993}. The traditional algorithms performed variable and cutpoint selection in one step. However, this leads to an undesirable behavior called variable selection bias. It means that the traditional algorithms prefer variables offering more cutpoints in the selection process -- regardless of their true information content. An algorithm that still has this problem is, for example, the \texttt{rpart} algorithm in R, based on the original CART algorithm by \citet{Breetal:1984}. Modern algorithms for classification and regression trees that have solved this problem are the unbiased approaches \texttt{QUEST} \citep{LohShi:1997}, which is available in SPSS, and \texttt{ctree} \citep{Hotetal:2006}, available in R in the \texttt{party} and \texttt{partykit} packages \citep{partykit:pkg}. The latter forms the basis for all MOB approaches presented in this paper. 
 
-\todo[inline]{Caro: following text copy pasted from Raschtree paper, ueberarbeiten}
+Once there are no more covariates that show a significant structural change in any node, the MOB algorithm stops splitting. In this way, the MOB algorithm selects only those variables that are relevant for distinguishing the groups, i.e., it performs automatic variable selection. Moreover, the trees will not grow as large as possible, but will stop when no more significant structural change is detected. This is the second difference between the modern classification and regression tree and MOB algorithms used here, compared to traditional classification and regression tree algorithms like those of \citet{Breetal:1984} and \citet{Qui:1993}: While the traditional algorithms grew very large trees and then cut them back by means of so called pruning, the framework employed here is based on statistical significance tests and party also on effect size measures (see application example 2) to stop the trees already in the growing phase when no more significant change can be detected. Other stopping criteria are based on the number of persons in the end nodes. These crieria ensure that the sample sizes in the end nodes are large enough to estimate the statistical model in each end node.\todo{we should discuss this in the application examples; there are some defaults but for models with many parameters it might make sense to increase them}
 
-What is important to note here is that the entire structure identified by the trees was not pre-specified and provided to the algorithm, but was learned from the data in an exploratory way. This is a key feature of the MOB approach that makes it very flexible and distinguishes it from purely parametric approaches, where only those main effects and interactions that are explicitly included in the specification of the model are considered.
+In summary, the rationale of a MOB algorithm consists of the following steps:
 
-Technically, the following consecutive steps are used to infer the structure of a MOB 
-
-%
 \begin{enumerate}
-  \item Estimate the model parameters jointly for all subjects in the current sample, starting with the full sample.
-  \item Assess the stability of the parameters with respect
-        to each available covariate.
-  \item If there is significant instability, split the sample
-        along the covariate with the strongest instability and in
-        the cutpoint leading to the highest improvement of the model fit.
-  \item Repeat steps 1--3 recursively in the resulting subsamples
-        until there are no more significant instabilities (or the
-    subsample becomes too small).
+  \item The model parameters are first estimated jointly for all persons in the current node, starting with the full sample.
+  \item Structural change in the model parameters is assessed with respect to each available covariate.
+  \item If there is significant structural change, groups are split along the covariate with the strongest change and using the optimal cutpoint.
+  \item Steps 1--3 are repeated recursively in the resulting groups
+        until there is no more significant structural change (or the
+   groups becomes too small).
 \end{enumerate}
-%
+
+For more details on the statistical theory behind unbiased classification and regression trees and MOB, see \citet{Hotetal:2006,StrMalTut:2009:PM,StroyKopf15}.  
+
+An important characteristic of classification and regression trees as well as MOB is that the entire structure identified by the trees does not have to be pre-specified by the researcher in a confirmatory way, but is learned from the data in an exploratory way. This is a key feature of the MOB approach that makes it very flexible and distinguishes it from purely parametric approaches, where only those main effects and interactions that are explicitly included in the specification of the model are considered. While there are phases in psychological and educational research where it is very important to specify hypothesis a priori and test them in a confirmatory way, in early stages of research exploratory methods are an important addition to the statistical toolbox for researchers. 
 
 
 \todo[inline]{\textbf{Previous Papers on IRT and Rasch Models in Journal of School Psychology}
 
 Rasch and IRT models are often mentioned in this journal's papers as being used for scoring school assessments (e.g., Virginia Standards of Learning Assessments;  Oregon Assessment of Knowledge and Skills; Peabody individual achievement test, \cite{Luth92}).
 
-A general introduction to IRT in the journal is provided by \cite{AnthyDiPe16}.%included
-There are also papers describing extensions to mixure IRT models \cite{AyalySant17}%included
+A general introduction to IRT in the journal is provided by \cite{AnthyDiPe16}. \edc{included}
+There are also papers describing extensions to mixure IRT models \cite{AyalySant17} \edc{included}
 and many-facet Rasch measurement (MFRM) approaches that allow controlling for rater effects \cite{StycyAntr21}. 
 
-\cite{Mall97} assessed DIF by comparing Rasch model item difficulties of WISC-III subtests between 110 severely and profoundly deaf children, 110 matched nonreferred hearing children, and the WISC-III standardization sample (N = 2,200).%included
+\cite{Mall97} assessed DIF by comparing Rasch model item difficulties of WISC-III subtests between 110 severely and profoundly deaf children, 110 matched nonreferred hearing children, and the WISC-III standardization sample (N = 2,200). \edc{included}
 }
 
 
