--- a/_MOB_paper.bib
+++ b/_MOB_paper.bib
@@ -172,3 +172,121 @@
 	techreport       = {http://eeecon.uibk.ac.at/~zeileis/papers/Frick+Strobl+Zeileis-2015.pdf},
 }
 
+@Book{		  Breetal:1984,
+  author	= {L. Breiman and J.~H. Friedman and R.~A. Olshen and C.~J.
+		  Stone},
+  title		= {Classification and Regression Trees},
+  publisher	= {Chapman and Hall},
+  year		= {1984},
+  address	= {New York}
+}
+
+@InCollection{KopAugStr:2013:,
+	title            = {{T}he Potential of Model-Based Recursive Partitioning in the Social Sciences: {R}evisiting {O}ckam's {R}azor},
+	booktitle        = {Contemporary Issues in Exploratory Data Mining in the Behavioral Sciences},
+	author           = {Kopf, Julia and Augustin, Thomas and Strobl, Carolin},
+	editor           = {J. McArdle and G. Ritschard},
+	publisher        = {Routledge},
+	pages            = {75--95},
+	year             = {2013},
+	address          = {New York},
+}
+
+@Article{StrWicZei:2011:JoEaBS,
+	title            = {{A}ccounting for Individual Differences in {B}radley-{T}erry Models by Means of Recursive Partitioning},
+	author           = {Strobl, Carolin and Wickelmaier, Florian and Zeileis, Achim},
+	journal          = {Journal of Educational and Behavioral Statistics},
+	volume           = {36},
+	number           = {2},
+	pages            = {135--153},
+	year             = {2011},
+	doi              = {10.5282/ubm/epub.10588},
+}
+
+@Article{StrKopZei:2015:P,
+	title            = {{R}asch Trees: {A} New Method for Detecting Differential Item Functioning in the {R}asch Model},
+	author           = {Strobl, Carolin and Kopf, Julia and Zeileis, Achim},
+	journal          = {Psychometrika},
+	volume           = {80},
+	number           = {2},
+	pages            = {289--316},
+	year             = {2015},
+	doi              = {10.1007/s11336-013-9388-3},
+	techreport       = {https://eeecon.uibk.ac.at/~zeileis/papers/Strobl+Kopf+Zeileis-2015.pdf},
+}
+
+@Article{KomStrZei:2017:EaPM,
+	title            = {{T}ree-Based Global Model Tests for Polytomous {R}asch Models},
+	author           = {Komboz, Basil and Strobl, Carolin and Zeileis, Achim},
+	journal          = {Educational and Psychological Measurement},
+	volume           = {78},
+	number           = {1},
+	pages            = {128--166},
+	year             = {2017},
+	doi              = {10.1177/0013164416664394},
+	techreport       = {https://eeecon.uibk.ac.at/~zeileis/papers/Komboz+Strobl+Zeileis-2018.pdf},
+}
+
+@article{HenDebStr:2023:EPM,
+	title            = {{A} New Stopping Criterion for {R}asch Trees Based on the {M}antel-{H}aenszel Effect Size Measure for Differential Item Functioning},
+	author           = {Henninger, Mirka and Debelak, Rudolf and Strobl, Carolin},
+	journal          = {Educational and Psychological Measurement},
+	publisher        = {PsyArXiv},
+	volume           = {83},
+	number           = {1},
+	pages            = {181--212},
+	year             = {2023},
+	doi              = {10.1177/00131644221077135},
+	url              = {https://journals.sagepub.com/doi/10.1177/00131644221077135},
+}
+
+@Article{     KimLoh:2001,
+ author    = {H. Kim and W. Loh},
+ title     = {Classification Trees with Unbiased Multiway Splits},
+ year      = {2001},
+ journal   = {Journal of the American Statistical Association},
+ volume    = {96},
+ number    = {454},
+ pages     = {589--604}
+}
+
+@Book{        Qui:1993,
+ author    = {J.~R. Quinlan},
+ title     = {C4.5: Programms for Machine Learning},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ year      = {1993},
+ address   = {San Francisco}
+}
+
+@Article{     LohShi:1997,
+ author    = {W. Loh and Y. Shih},
+ title     = {Split Selection Methods for Classification Trees},
+ year      = {1997},
+ journal   = {Statistica Sinica},
+ volume    = {7},
+ number    = {4},
+ pages     = {815--840}
+}
+
+@Article{     Hotetal:2006,
+ title     = {Unbiased Recursive Partitioning: A Conditional Inference
+         Framework},
+ author    = {T. Hothorn and K. Hornik and A. Zeileis},
+ journal   = {Journal of Computational and Graphical Statistics},
+ year      = {2006},
+ volume    = {15},
+ number    = {3},
+ pages     = {651--674},
+}
+
+  @Article{ partykit:pkg,
+    title = {{partykit}: A Modular Toolkit for Recursive Partytioning
+      in {R}},
+    author = {Torsten Hothorn and Achim Zeileis},
+    journal = {Journal of Machine Learning Research},
+    year = {2015},
+    volume = {16},
+    pages = {3905-3909},
+    url = {https://jmlr.org/papers/v16/hothorn15a.html},
+  }
+
