--- a/_MOB_paper.bib
+++ b/_MOB_paper.bib
@@ -41,7 +41,7 @@
 }
 
 @article{HennyDeba23,
-  title={A New Stopping Criterion for {R}asch Trees Based on the {M}antel--{H}aenszel Effect Size Measure for Differential Item Functioning},
+  title={A New Stopping Criterion for {R}asch Trees Based on the {M}antel-{H}aenszel Effect Size Measure for Differential Item Functioning},
   author={Henninger, Mirka and Debelak, Rudolf and Strobl, Carolin},
   journal={Educational and Psychological Measurement},
   volume={83},
@@ -289,4 +289,71 @@
     pages = {3905-3909},
     url = {https://jmlr.org/papers/v16/hothorn15a.html},
   }
+  
+@InCollection{KopAugStr:2013,
+	title            = {{T}he Potential of Model-Based Recursive Partitioning in the Social Sciences: {R}evisiting {O}ckam's {R}azor},
+	booktitle        = {Contemporary Issues in Exploratory Data Mining in the Behavioral Sciences},
+	author           = {Kopf, Julia and Augustin, Thomas and Strobl, Carolin},
+	editor           = {J. McArdle and G. Ritschard},
+	publisher        = {Routledge},
+	pages            = {75--95},
+	year             = {2013},
+	address          = {New York},
+}
 
+@article{HolTha:1985,
+author = {Holland, Paul W. and Thayer, Dorothy T.},
+title = {An alternate definition of the {ETS} delta scale of item difficulty},
+journal = {ETS Research Report Series},
+volume = {1985},
+number = {2},
+pages = {i-10},
+doi = {https://doi.org/10.1002/j.2330-8516.1985.tb00128.x},
+}
+
+@article{Stretal:2021:APM,
+	title            = {{A}nchor Point Selection: {S}cale Alignment Based on an Inequality Criterion},
+	author           = {Strobl, Carolin and Kopf, Julia and Kohler, Lucas and {von Oertzen}, Timo and Zeileis, Achim},
+	journal          = {Applied Psychological Measurement},
+	volume           = {45},
+	number           = {3},
+	pages            = {214--230},
+	year             = {2021},
+	doi              = {10.1177/0146621621990743},
+	techreport       = {https://www2.uibk.ac.at/downloads/c4041030/wpaper/2018-03.pdf},
+}
+
+@Article{Ack:1992,
+  author = {Terry A. Ackerman},
+  title = {A Didactic Explanation of Item Bias, Item Impact, and Item Validity from a Multidimensional Perspective},
+  year = {1992},
+  journal = {Journal of Educational Measurement},
+  volume = {29},
+  number = {1},
+  pages = {67--91},
+}
+
+@Article{PhiRusHor:2018:JoCaGS,
+	title            = {{M}easuring the Stability of Results From Supervised Statistical Learning},
+	author           = {Philipp, Michel and Rusch, Thomas and Hornik, Kurt and Strobl, Carolin},
+	journal          = {Journal of Computational and Graphical Statistics},
+	volume           = {27},
+	number           = {4},
+	pages            = {685--700},
+	year             = {2018},
+	doi              = {10.1080/10618600.2018.1473779},
+	techreport       = {https://epub.wu.ac.at/5398/1/Report131.pdf},
+}
+
+@InProceedings{PhiZeiStr:2016:,
+	title            = {{A} Toolkit for Stability Assessment of Tree-Based Learners},
+	booktitle        = {Proceedings of COMPSTAT 2016 – 22nd International Conference on Computational Statistics},
+	author           = {Philipp, Michel and Zeileis, Achim and Strobl, Carolin},
+	editor           = {In Ana Colubi and Angela Blanco and Cristian Gatu},
+	pages            = {315--325},
+	year             = {2016},
+	address          = {Oviedo},
+	organization     = {The International Statistical Institute/International Association for Statistical Computing},
+	doi              = {http://hdl.handle.net/10419/146128},
+	techreport       = {https://eeecon.uibk.ac.at/~zeileis/papers/Philipp+Zeileis+Strobl-2016.pdf},
+}
