--- a/_MOB_paper.tex
+++ b/_MOB_paper.tex
@@ -26,8 +26,10 @@
 
 \title{One Model May Not Fit All: Subgroup Detection Using MOB}
 \shorttitle{shorttitle}
-\authorsnames{Marjolein Fokkema$^1$ \& Carolin Strobl$^2$}
-\authorsaffiliations{$^1$Leiden University, $^2$Universit\"at Z\"urich}
+\author{Marjolein Fokkema, Mirka Henninger \& Carolin Strobl}
+
+%\authorsnames{Marjolein Fokkema$^1$ \& Carolin Strobl$^2$}
+%\authorsaffiliations{$^1$Leiden University, $^2$Universit\"at Z\"urich}
 
 \abstract{Model-based recursive partitioning \citep[MOB,][]{ZeilyHoth08} is a flexible framework for detecting subgroups \edc{of persons showing different} effects in a wide range of parametric models. It provides a versatile tool for detecting and explaining heterogeneity of intervention effects. In this tutorial paper, we provide an introduction to the general MOB framework. In two specific case studies, we show how MOB-based methods can be used to detect and explain heterogeneity in two widely-used frameworks in educational studies: mixed-effects and item-response theory models. In the first case study, we show how GLMM trees \citep{FokkySmit18} can be used to detect subgroups with different parameters in mixed-effects models. We apply GLMM trees to a dataset from a study of \citep{Demi09}, who compared longitudinal performance of siblings who did, and siblings who did not participate in the Head Start program. Using GLMM trees, we identify subgroups of families in which children show comparatively larger or smaller gains in performance following participation in Head Start. In a second case study, we show how Rasch trees \citep{StroyKopf15} can be used to detect subgroups with different item parameters in IRT models, \edc{i.e.~differential item functioning (DIF).
 DIF should be investigated before using test results for comparing groups, because undetected DIF can affect test fairness.} We show how a recently developed stopping criterion \citep{HennyDeba23} can be used to guide subgroup detection based on DIF effect sizes.\\}
@@ -39,7 +41,7 @@ DIF should be investigated before using test results for comparing groups, becau
 
 
 \maketitle
-
+\todo[inline]{Marjolein: what document style for authorsnames? commented out}
 
 
 \todo[inline]{Target journal: \textit{Journal of School Psychology}. This Special Issue is on "Conceptual and Methodological Advances for Understanding Contextual, Identity, and Cultural Effects in Intervention Research". Submission deadline: October 31, 2023}
@@ -62,12 +64,12 @@ way.
 In the following section, we will give a short introduction into the algorithm and statistical concepts behind MOB. Readers interested in learning more about its predecessor method, classification and regression trees, are referred to the introduction by \citet{StrMalTut:2009:PM}. An alternative framework for detecting groups of persons with different model parameters is mixture modelling \citep[see, e.g.,][in the context of Rasch modelling]{AyalySant17,FriStrZei:2015:EaPM}. Mixture modelling aims at identifying latent classes of persons with different properties. It can also be combined with covariates. A comparison of both approches is given by \citet{FriStrZei:2014}.
 
 
-\section{The algorithm behind MOB}
+\section{The Algorithm Behind MOB}
 
 What you see displayed in Figures~\ref{fig:lmm_tree}, \ref{fig:math_tree}, and \ref{fig:read_tree}\todo{adjust if raschtree example changes}, which will be explained in detail in the application example sections, is the result of the MOB algorithm for a linear mixed-effects model (Figure~\ref{fig:lmm_tree}) and for a binary Rasch model (Figures~\ref{fig:math_tree} and \ref{fig:read_tree}). These figures share the tree-structure in the upper part, but differ in their lower part. The starting point of the tree structure is at the very top of each tree. The very top of each tree is called the root node, so what you see are actually ``upside down'' trees with the root at the top and the branches at the 
 bottom. The root node at the very top contains the entire sample of persons in the data set. From there, the persons are divided into subgroups.
 
-The subgroups are defined by the covariates that are used for splitting and together with cutpoints in those covariates. For example, in Figure~\ref{fig:lmm_tree} for the metric covariates \texttt{AFTQ} and \income{Income} a numeric cutpoint has been selected by the MOB algorithm to separate the groups. The algorithm has identified this cutpoint as being the location of the strongest parameter difference between the two resulting groups. The categorical covariate \texttt{Race}, which was coded in three categories in this example, has been divided into two groups of categories: Black and Hispanic vs.~White. For a binary covariate, \todo{like ... -- add name if is there one in the other example?} 
+The subgroups are defined by the covariates that are used for splitting and together with cutpoints in those covariates. For example, in Figure~\ref{fig:lmm_tree} for the metric covariates \texttt{AFTQ} and \texttt{Income} a numeric cutpoint has been selected by the MOB algorithm to separate the groups. The algorithm has identified this cutpoint as being the location of the strongest parameter difference between the two resulting groups. The categorical covariate \texttt{Race}, which was coded in three categories in this example, has been divided into two groups of categories: Black and Hispanic vs.~White. For a binary covariate, \todo{like ... -- add name if is there one in the other example?} 
 on the other hand, there is only one possible cutpoint, namely between the two categories. While it is also possible to create more than two groups in each split \citep{KimLoh:2001,Qui:1993}, binary splitting algorithms are typically preferred because they lead to more concise trees. 
 
 The parametric model to which the MOB algorithm is applied is visualized in the end nodes at the bottom of each tree. While in Figure~\ref{fig:lmm_tree} each end node contains a linear mixed-effecs model with a group-specific effect for the Head Start intervention, in Figures~\ref{fig:math_tree} and \ref{fig:read_tree} each end node contains the group-specific item parameters of a Rasch model for the respective test items. 
@@ -79,6 +81,7 @@ Once there are no more covariates that show a significant structural change in a
 
 In summary, the rationale of a MOB algorithm consists of the following steps:
 
+\todo{why are the spaces so big? I didn't change the enumerate command}
 \begin{enumerate}
   \item The model parameters are first estimated jointly for all persons in the current node, starting with the full sample.
   \item Structural change in the model parameters is assessed with respect to each available covariate.
@@ -88,7 +91,7 @@ In summary, the rationale of a MOB algorithm consists of the following steps:
    groups becomes too small).
 \end{enumerate}
 
-For more details on the statistical theory behind unbiased classification and regression trees and MOB, see \citet{Hotetal:2006,StroyKopf15,StrMalTut:2009:PM}.  
+For more details on the statistical theory behind unbiased classification and regression trees and MOB, see \citet{Hotetal:2006,StrMalTut:2009:PM,StroyKopf15}.  
 
 An important characteristic of classification and regression trees as well as MOB is that the entire structure identified by the trees does not have to be pre-specified by the researcher in a confirmatory way, but is learned from the data in an exploratory way. This is a key feature of the MOB approach that makes it very flexible and distinguishes it from purely parametric approaches, where only those main effects and interactions that are explicitly included in the specification of the model are considered. While there are phases in psychological and educational research where it is very important to specify hypothesis a priori and test them in a confirmatory way, in early stages of research exploratory methods are an important addition to the statistical toolbox for researchers. 
 
@@ -104,6 +107,33 @@ and many-facet Rasch measurement (MFRM) approaches that allow controlling for ra
 \cite{Mall97} assessed DIF by comparing Rasch model item difficulties of WISC-III subtests between 110 severely and profoundly deaf children, 110 matched nonreferred hearing children, and the WISC-III standardization sample (N = 2,200). \edc{included}
 }
 
+The general framework of MOB introduced above will now be applied to two types of statistical models that are particularly relevant in school psychology research: Mixed-effects models for repeated measures or nested data structures and measurement models for validating psychological and educational tests. 
+
+\subsection{Using MOB for Subgroup Detection in Mixed-Effects Models}
+
+In mixed-effects models contain two types of effects: fixed effects and random effects. Fixed effects are typically used, for example, to describe the effect of an intervention on the average student performance. Random effects are used to describe the variation in the intercept and slope for, e.g., students in different classes. 
+
+When mixed-effects models are combined with MOB, ...
+
+\todo[inline]{Marjolein please edit and finish}
+
+\subsection{Using MOB for Detecting DIF in Measurement Models}
+
+Before being able to use a psychological or educational test for comparing different groups of persons in a fair way, different assumptions of the measurement model have to be checked. In the framework of IRT and Rasch measurement, test items are typically investigated with respect item misfit, multidimensionality and other violations of the measurement model \citep[cf., e.g.,][for an introduction]{DebStrZei:2022:CRC}. Another assumption that is particularly crucial for the comparability of test scores between groups is measurement invariance. Items that violate measurement invariance by showing different measurement properties for different groups of participants display DIF.
+
+MOB can be used to detect DIF by means of searching for covariates that display structural change in the item parameters of the measurement model. For the Rasch measurement model, the R function for conducting the MOB analysis is the \texttt{raschtree} function from R package \texttt{psychotree} \citep{StroyKopf15} \todo{should we cite the package too or only the paper?} The usage of this function will be illustration in application example 2. We will see that, just like for the mixed-effects model trees \todo{use same names for methods everywhere}, we need to specify which variables go into the parametric mode. In the case of the Rasch model, this will be the test items. Moreover, we need to specify, which variables are made available to the MOB algorithm for selecting relevant splitting variables and cutpoints. 
+
+If one joint Rasch model holds for the entire sample, i.e., if there is no DIF a Rasch tree should show no splits. However, in certain settings in educational research, such as large scale assessements, very large sample sizes are available for testing for DIF. Large sample sizes are good for detecting even small effects or model violations with a high statistical power. The same holds for the statistical tests used for detecting parameter change in the MOB algorithm, so that in larger samples even very small parameter differences can be detected with large samples. However, in DIF detection this may mean that even very small DIF effects, that in practice can be considered ignorable, will be detected if only the sample is big enough. As we will illustrate in the first part of application example 2, for a large sample of university students \todo{are only students in the sample?} who have taken a quiz to test their general knowledge, this can lead to very large trees, that are hard to interpret and contain splits that would not be considered relevant by measurement experts. Therefore, an extension of Rasch trees has been suggested by \citet{HennyDeba23} based on the Mantel-Haenszel effect size measure for DIF. \citet{HolTha:1985} have suggested an intuitive classification of DIF effect sizes based in the Mantel-Haenszel statistic, that is being widely used in educational testing. In this classification, category A stands for negligible DIF (small effect size or not statistically significant), B for medium DIF (neither A nor C), and C for large DIF (large effect size and statistically significant). \citet{HennyDeba23} have incorporated this classification as an additional stopping criterion for Rasch trees, so that the user can decide, for example, that a split should only be conducted if the detected DIF is of category B or C, while negligible DIF of category A should be ignored.\todo{Mirka: is it A vs. B,C or A,B vs. C by default?} 
+
+As we will show in application example 2, for large sample sizes this can be very helpful because it results in shorter trees that are easier to interpret and contain only splits corresponding to DIF effect sizes considered relevant in practice. Together with a purification step \citet[see][for details]{HennyDeba23}, the Mantel-Haenszel classification can also be used for highlighting those items that show DIF with respect to certain groups of persons graphically. This can help generate hypothesis about the sources of DIF, as we will ilustrate in application example 2, and can also aid the decision how to proceed with the DIF items. For example, items that show DIF between different language groups can often be improved by means of making sure that in all translations the meaning is as similar as possible, that the words used in the different languages are equally frequently used, etc. In other situations, sources of DIF might be harder to eliminate, so that often DIF items are excluded from a test. Either way, the measurement model needs to be refitted and its assumptions checked again after the final set of items has been decided upon and, in the case of modified items, administered again. 
+
+Another important aspect to keep in mind is that DIF can be caused by one or more items measuring a secondary dimension in addition to the dimension that is intended to be measured by the test. This would be the case in test inteded to measure math aptitude containing pure algebra problems as well as story problems. Students whose native language is not the same as the test language can have disadvantage in answering the story problems, for example when they contain seldomly used words. These items will then show DIF between native and non-native speakers. When encountering this, the test developers will have to decide whether the items with story problems should be excluded from the test, whether they can be improved, e.g., by using more frequently used words, or whether the test should be considered two-dimensional rather than one-dimensional \citep[see also][for a discussion of the connection between DIF and multidimensionality]{Ack:1992,Stretal:2021:APM}.
+
+We will now illustrate how to use the R packages \texttt{glmertree} and \texttt{psychotree} to conduct the MOB analyses. 
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \newpage
@@ -149,7 +179,7 @@ We inspect the complete dataset by plotting PPVT scores against age, separated b
 \label{fig:global_lmm}
 \end{figure}%
 
-\fixme{code for figure not displayed on purpose? why only those particular x axis ticks?}
+\todo{code for figure not displayed on purpose? why only those particular x axis ticks?}
 
 \FloatBarrier
 \subsection{Linear mixed effects model tree}
@@ -345,15 +375,24 @@ The resulting tree is presented in Figure~\ref{fig:read_tree}, which reveals a p
 \FloatBarrier
 \section{Discussion}
 
+In this tutorial paper we have outlined the rationale of the MOB algorithm and how it can be used for detecting parameter differences in mixed-effects and Rasch models. The main advantage of MOB is that it can detect groups of persons with different model parameters in a data driven way. This makes it more flexible for detecting differences that were not hypothesized by the researchers. For example in DIF analysis, it is often the case that any obvious sources of DIF have already been avoided by the content expernts in the item creation phase. Any remaining DIF is unexpected. Therefore, any DIF detection approach that relies on the researchers correctly specifying the exact groups of persons that exhibit DIF can miss DIF if it is associated with other (combinations of) covariates or other cutpoints than the ones investigated. In this sense, a more exploratory approach like a Rasch tree has a higher statistical power to detect DIF in previously unknown groups \citep{StrKopZei:2015:P}. The same holds for parameter differences in mixed-effects models, where the substantial hypothesis are typically about the fixed effects of the interventions, not necessarily about all possible subgroup-specific .... \todo{Marjolein add if this makes any sense here}
+
 \todo[inline]{Write summary of findings.}
+
+For our two application examples, we could show that MOB can detect ..., performs automated variable selection \todo[inline]{or did you, Marjolein, mean repeat substantive findings? not very exciting for SPISA} 
 
 \todo[inline]{Mention shortcomings.}
 
+not possible to detect certain patterns: XOR problem, known for all trees
+
+stability of trees, small changes in data can lead to quite different looking tree. The tree structure should always be interpreted jointly for all variables: rather than considering the first splitting variable to be the most important one, it is actually the combination of all splitting variables that creates the groups.\todo{in interpretation of trees in examples: do this, point out that it is interactions -- Caro also add in intro?}. The \texttt{stabletree} R package also provides descriptive statistics and graphics that help judge the stability of tree and MOB results \citep{PhiRusHor:2018:JoCaGS,PhiZeiStr:2016}. 
+
+
 \todo[inline]{Write about future work.}
 
+sample size dependence, similar ideas like MH trees also possible for other MOB?
 
-
-
+The Mantel-Haenszel effect size measure for DIF will be integrated in the \texttt{psychotools} package. 
 
 
 
