--- a/_MOB_paper.bib
+++ b/_MOB_paper.bib
@@ -306,6 +306,7 @@ author = {Holland, Paul W. and Thayer, Dorothy T.},
 title = {An alternate definition of the {ETS} delta scale of item difficulty},
 journal = {ETS Research Report Series},
 volume = {1985},
+year = {1985},
 number = {2},
 pages = {i-10},
 doi = {https://doi.org/10.1002/j.2330-8516.1985.tb00128.x},
